DarkIce next release

    o added ALSA support, thanks to Christian Forster
      <forster@like.e-technik.uni-erlangen.de>

07-01-2004: DarkIce 0.13.2 released

    o bug fix: two bugs fixed that caused core dump when encoding into
      mp3 of FreeBSD. thanks to John Hay <jhay@icomtek.csir.co.za>
    o added configure option --with-debug to enable compilation for debug mode

12-02-2003: Darkice 0.13.1 released

    o added cross-platform pthread detection, thanks to
      Steven G. Johnson <stevenj@alum.mit.edu> and
      Alejandro Forero Cuervo <bachue@bachue.com>
      see http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html
    o added proper detection of netural endiannes for 16 bit recording
    o basically these changes allow compilation on FreeBSD

09-02-2003: DarkIce 0.13 released

    o added feature for setting the TITLE comment field for vorbis
      streams. thanks to Ricardo Galli <gallir@uib.es>
    o bugfix: fixed minor bug in IcecCast2.cpp, which could have lead to
      a buffer overflow. thanks to Atsuhiko Yamanaka <ymnk@jcraft.com>
    o bugfix: MultiThreadedConnector::sinkThread() was private, now public
    o added fileAddDate configuration option
      thanks to Nicu Pavel <npavel@ituner.com>
    o added support for big endian OSS devices (like Linux PowerPC)

20-10-2002: DarkIce 0.12 released

    o ported to FreeBSD (removed reference to MSG_NOSIGNAL in TcpSocket.cpp)
    o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
    o changed internals so that now each encoding/server connection is
      a separate thread
    o when a connection is dropped, DarkIce tries to reconnect, indefinitely

20-08-2002: DarkIce 0.11 released

    o added possibility to specify maximum bitrate for Ogg Vorbis streams
    o added HTTP Basic authentication for icecast2 logins
    o added mp3 streaming for icecast2
    o added possibility to stream in mono even when recording in stereo,