@@ -18,4 +18,5 @@ with contributions by:
     Ricardo Galli <gallir@uib.es>
     John Hay <jhay@icomtek.csir.co.za>
     Christian Forster <forster@like.e-technik.uni-erlangen.de>
+    John Deeny <taqueso@dilapidated.org>
 
